tests/compile_fail/enum_weights_with_different_types.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/enum_weights_with_different_types.rs:8:35
  |
8 |     #[standard_distribution(weight = 3.0f64)]
  |                                      ^^^^^^ expected `f32`, found `f64`
  |
help: change the type of the numeric literal from `f64` to `f32`
  |
8 |     #[standard_distribution(weight = 3.0f32)]
  |                                         ~~~

error[E0308]: mismatched types
  --> tests/compile_fail/enum_weights_with_different_types.rs:16:35
   |
16 |     #[standard_distribution(weight = 3)]
   |                                      ^ expected floating-point number, found integer
